mobile login css fix (margin-left updated on smaller screens for buttons and cookie warnign)

--- a/bestanden/css/account.sass
+++ b/bestanden/css/account.sass
@@ -63,8 +63,14 @@
 		input
 			width: 80%
 
+		button[type="submit"]
+			margin-left: 0
+
 		img
 			display: none
 
 		.resetPasswordButton
 			width: 70%
+
+		.cookie
+			margin-left: 0
